design/css/style.css
* {
  font-family: "Shadows Into Light", sans-serif;
  font-size: medium;
  padding: 0;
  margin: 0;
  outline: none;
}

body {
  font-family: "Shadows Into Light";
  color: black;

  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

p {
  font-size: large;
}
nav ul {
  list-style: none;
}

nav ul li {
  display: right;
  margin-right: 20px;
}

.event-thumbnails {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 20px;
}

/* .fa-icon {
  font-size: 20px;
  padding-top: 5px;
  padding-bottom: 5px;
  opacity: 70%;
} */

#description + .tox.tox-tinymce {
  display: inline-flex;
  align-items: center;
  background-color: #fff;

  width: 100%;
  background-size: 16px 12px;
  border: 1px solid #ced4da;
  border-radius: 0.25rem;
}

.datetimepicker {
  display: inline-flex;
  align-items: center;
  background-color: #fff;

  width: 100%;
  background-size: 16px 12px;
  border: 1px solid #ced4da;
  border-radius: 0.25rem;
}

.datetimepicker input {
  font: inherit;
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  border: 0;
  background-color: transparent;
}
.datetimepicker input[type="date"] {
  width: 60%;
  padding: 0.25rem 0 0.25rem 0.5rem;
  border-right-width: 0;
}
.datetimepicker input[type="time"] {
  width: 40%;
  padding: 0.25rem 0.5rem 0.25rem 0;
  border-left-width: 0;
}
.datetimepicker span {
  height: 1rem;
  margin-right: 0.25rem;
  margin-left: 0.25rem;
  border-right: 1px solid #ddd;
}

#uploaded-image {
  width: 100%;
}

/* User profile CSS starts */

.emp-profile {
  padding: 3%;
  margin-top: 3%;
  margin-bottom: 3%;
  border-radius: 0.5rem;
  background: #fff;
}
.profile-img {
  text-align: center;
}
.profile-img img {
  width: 70%;
  height: 100%;
}
.profile-img .file {
  position: relative;
  overflow: hidden;
  margin-top: -20%;
  width: 70%;
  border: none;
  border-radius: 0;
  font-size: 15px;
  background: #212529b8;
}
.profile-img .file input {
  position: absolute;
  opacity: 0;
  right: 0;
  top: 0;
}
.profile-head h5 {
  color: #333;
}
.profile-head h6 {
  color: #0062cc;
}
.profile-edit-btn {
  border: none;
  border-radius: 1.5rem;
  width: 70%;
  padding: 2%;
  font-weight: 600;
  color: #6c757d;
  cursor: pointer;
}
.proile-rating {
  font-size: 12px;
  color: #818182;
  margin-top: 5%;
}
.proile-rating span {
  color: #495057;
  font-size: 15px;
  font-weight: 600;
}
.profile-head .nav-tabs {
  margin-bottom: 5%;
}
.profile-head .nav-tabs .nav-link {
  font-weight: 600;
  border: none;
}
.profile-head .nav-tabs .nav-link.active {
  border: none;
  border-bottom: 2px solid #0062cc;
}
.profile-work {
  padding: 14%;
  margin-top: -15%;
}
.profile-work p {
  font-size: 12px;
  color: #818182;
  font-weight: 600;
  margin-top: 10%;
}
.profile-work a {
  text-decoration: none;
  color: #495057;
  font-weight: 600;
  font-size: 14px;
}
.profile-work ul {
  list-style: none;
}
.profile-tab label {
  font-weight: 600;
}
.profile-tab p {
  font-weight: 600;
  color: black;
}

/* User profile CSS ends */

/* Footer section start */

footer {
  padding-bottom: 25px;
  background-color: whitesmoke;
  color: black;
}

footer hr {
  opacity: 80%;
  width: 90%;
  margin-bottom: 40px;
}

footer .ion-icon-social {
  text-align: center;
}

footer .ion-icon-social > a {
  font-size: 24px;
  opacity: 0.8;
  width: 40px;
  margin: 0 8px;
  display: inline-block;
  border-radius: 50%;
  border: black;
}

.ion-icon-social {
  padding-top: 30px;
  padding-bottom: 10px;
}

footer {
  margin-top: 15px;
}

footer .ion-icon-social a i {
  color: black;
}

footer .copyright-text {
  margin-top: 15px;
  text-align: center;
  font-size: 15px;
  color: var(--dark-color);
  margin-bottom: 0;
}

.icon {
  font-size: 30px;
}

/* Footer section end */

/* Slider css */

.card-strong {
  font-weight: 900;
}

.card-event-image {
  height: 250px;
  width: 400px;
}

.card {
  padding: 0;
}

.card-title {
  font-size: 1.5em;
}

.badge {
  font-size: 1em;
}

@media screen and (max-width: 1400px) {
  .card-strong {
    font-weight: 800;
  }

  .card-event-image {
    height: 208px;
    width: 333px;
  }

  .card-title {
    font-size: 1.3em;
  }

  .badge {
    font-size: 1em;
  }
}

@media screen and (max-width: 1200px) {
  .card-strong {
    font-weight: 800;
  }

  .card-event-image {
    height: 178px;
    width: 285px;
  }

  .card-title {
    font-size: 1.3em;
  }

  .badge {
    font-size: 1em;
  }
}

@media screen and (max-width: 1000px) {
  .card-strong {
    font-weight: 700;
  }

  .card-event-image {
    height: 125px;
    width: 200px;
  }

  .card-title {
    font-size: 1.2em;
  }

  .badge {
    font-size: 0.9em;
  }
}

.favourite-icon {
  position: absolute;
  top: 10px;
  right: 10px;
  font-weight: bold;
  text-transform: uppercase;
  border-radius: 5px;
}

.favourite-icon i {
  font-size: 30px;
  color: black;
  opacity: 20%;
  opacity: 30%;
}

.favourite-icon i:hover {
  color: crimson;
  opacity: 70%;
}

.bg-location {
  background-color: palegoldenrod;
}

.bg-new {
  background-color: green;
}

.bg-type {
  background-color: lightskyblue;
}

.carousel-control-prev,
.carousel-control-next {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  width: 40px;
  height: 40px;
  background-color: black;
  border: none;
  border-radius: 50%;
  color: white;
  align-items: center;
  justify-content: center;
  display: flex;
}

.carousel-control-prev {
  left: -5%;
}

.carousel-control-next {
  right: 5%;
}

.carousel-control-prev {
  left: -20px;
}

.carousel-control-next {
  right: -20px;
}

.carousel-control-prev-icon,
.carousel-control-next-icon {
  background-size: 50%;
  background-position: center;
  background-repeat: no-repeat;
}

.carousel-control-prev-icon {
  background-image: url('data:image/svg+xml;charset=utf8,%3Csvg xmlns="http://www.w3.org/2000/svg" fill="%23ffffff" viewBox="0 0 8 8"%3E%3Cpath d="M4.5 0l-.5.5L1 3.5 4.5 7l.5-.5L2 3.5l3-3z"/%3E%3C/svg%3E');
}

.carousel-control-next-icon {
  background-image: url('data:image/svg+xml;charset=utf8,%3Csvg xmlns="http://www.w3.org/2000/svg" fill="%23ffffff" viewBox="0 0 8 8"%3E%3Cpath d="M2.5 0l-.5.5L5 3.5 1.5 7l.5.5L6 3.5l-3.5-3z"/%3E%3C/svg%3E');
}

.carousel-dark .carousel-control-prev-icon,
.carousel-dark .carousel-control-next-icon {
  filter: invert(0) grayscale(100);
}

/* Slider css end */

